# Banana-Idle

./: LICENSE  README.md  main_dev_bonus_OK_1_time.py  main_dev_v2.py  main_dev_v4_better_gui.py  main_with_icon.py  pyproject.toml
